# rpi-co2

./: .gitignore  Cargo.toml  values.csv
rpi-co2-ui/: bun.lockb  package.json
rpi-co2-ui/src/: App.tsx  chart.tsx
src/: main.rs  main_old.rs  sensor.rs  server.rs
src/templates/: index.jinja2
templates/: index.html  index.html.tera
