[package]
name = "rpi-co2"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[[bin]]
name = "server"
path = "src/bin/server/mod.rs"

[dependencies]
axum = { version = "0.7.4", features = ["tokio"] }
chrono = "0.4.33"
csv = "1.3.0"
mh-z19 = "0.3.3"
serde = { version = "1", features = ["derive"] }
serial = "0.4.0"
tokio = {version="1.36.0", features = ["full"]}
tower-http = { version = "0.5.1", feautures = ['fs'], features = ["full"] }
