[package]
name = "rpi-co2"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cli"
path = "src/cli.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[lib]
name = "sensor"
path = "src/sensor.rs"

[dependencies]
axum = { version = "0.7.4", features = ["tokio"] }
chrono = "0.4.33"
csv = "1.3.0"
mh-z19 = "0.3.3"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
serial = "0.4.0"
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.1", feautures = ['fs'], features = ["full"] }
tracing = { version = "0.1.40", features = [
    "log",
    "log-always",
    "max_level_debug",
] }
tracing-subscriber = "0.3.18"
